Add a little delay to async function.